<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="boxOne">Box One</string>
    <string name="boxTwo">Box Two</string>
    <string name="boxThree">Box Three</string>
    <string name="boxFour">Box Four</string>
    <string name="boxFive">Box Five</string>
    <string name="LetsPlay">How to Play</string>
    <string name="play">Tap the screen and buttons</string>
    <string name="redButton">Red</string>
    <string name="yellowButton">Yellow</string>
    <string name="greenButton">Green</string>
</resources>
